[project]
name = "usdaf-indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gql[all]>=4.0.0",
    "marimo[recommended]>=0.15.0",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.13.0",
    "rich>=14.1.0",
    "statsmodels>=0.14.5",
    "websockets>=15.0.1",
]
